--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -4,18 +4,18 @@
         }
 
         body {
-            font: 18px "Lato" 100!important;
+            font: 18px "Raleway" !important;
             color: rgb(45, 45, 45);
         }
 
         a {
             color:rgb(170, 108, 108);
-            text-decoration: none;
+            text-decoration: underline;
         }
 
         a:hover{
             color:rgba(170, 108, 108, 0.571);
-            text-decoration: none;
+            text-decoration: underline;
         }
 
         .divider a:hover {
@@ -46,8 +46,8 @@
         }
 
         .button.projects {
-            color: rgb(78, 78, 160);
-            border: 1px solid rgb(78, 78, 160);
+            color: rgb(20, 135, 235);
+            border: 1px solid rgb(20, 135, 235);
             border-radius: 1px;
             background-color: transparent;
         }
@@ -335,23 +335,11 @@
         }
 
         .divider {
-            font: 14px "Raleway";
-            color: gray;
+            font: 16px "Raleway";
+            color: rgb(65, 65, 65);
             text-align: center;
             background-color: white;
-            /* background-image: radial-gradient(circle, rgba(120, 120, 120, 0.94),rgba(120, 120, 120, 0.968),
-                rgb(184, 184, 184)); */
             padding: 10px;
-        }
-
-        .divider.end {
-            background-image: none;
-            height: 300px;
-        }
-
-        .divider.title {
-            font: 16px "Raleway";
-            font-weight: bold;
         }
 
         .divider.note {
