--- a/portfolioStyle.css
+++ b/portfolioStyle.css
@@ -524,13 +524,13 @@
             border-radius: 3px;
         }
 
-        .insta img{
-            width: 85px;
-            height: 85px;
+        .linkedin img{
+            width: 110px;
+            height: 100px;
             border: none;
         }
 
-        .github img{
+        .github img, .insta img{
             width: 85px;
             height: 85px;
             border: 0px;
